let's prevent text overlap

--- a/src/containers/Template/List/Template.module.css
+++ b/src/containers/Template/List/Template.module.css
@@ -5,6 +5,7 @@
 .Body {
   width: 40%;
   margin-right: 10px;
+  margin-left: 20px;
 }
 
 .Actions {
